@@ -7,52 +7,29 @@
 #
 # LICENSE: AGPLv3
 #
-# Copyright (C) 2016  Matt Florell <vicidial@gmail.com>
-# Copyright (c) 2017-2018 flyingpenguin.de UG <info@flyingpenguin.de>
-#               2017-2018 Jörg Frings-Fürst <j.fringsfuerst@flyingpenguin.de>
+# Copyright (©) 2016      Matt Florell <vicidial@gmail.com>
+#
+# Copyright (©) 2017-2018 flyingpenguin.de UG <info@flyingpenguin.de>
+#               2019      SNCT GmbH <info@snct-gmbh.de> 
+#               2017-2019 Jörg Frings-Fürst <open_source@jff.email>
 #
 # CHANGELOG
 #
-# 80316-2211 - First Build
-# 80317-1609 - Added Sangoma conf file backup and changed FTP settings
-# 80328-0135 - Do not attempt to archive /etc/my.cnf is --without-db flag is set
-# 80611-0549 - Added DB option to backup all tables except for log tables
-# 90620-1851 - Moved mysqldump bin lookup to database backup section
-# 100211-0910 - Added crontab backup and voicemail backup option
-# 100817-1202 - Fixed test option bug
-# 101208-0452 - Added checks for zaptel and dahdi conf files
-# 141103-1505 - Added option to export without leads, logs, servers or phones
-# 141124-2309 - Fixed Fhour variable bug
-# 150418-1801 - Added --db_raw_files_copy flag, issue #839
-# 151006-1337 - Added archive_path flag, issue #896
-# 160510-2249 - Added --db-without-archives flag, issue #945
-# 160719-1415 - Added --dbs-selected=XXX---YYY option
-# 161030-0847 - Added CLI ftp options, Issue #442
-# 171008-1235 - Fix sounds backup.
-#               Add --routines to backup PROZEDURES too.
-#               Add VARDB_backup_user, VARDB_backup_pass access parts with
-#                 no cron access.
-#               Switch temp directory to /tmp/vicibackup.
-#               Add prompt_count.txt to linux backup.
-# 180227-0658 - Add /etc/flyingpenguin
-#               Change license from AGPLv2 to AGPLv3
-# 180507-1612 - Remove prompt_count.txt from backup
-# 180616-1825 - Add sniplet into perl scripts to run only once a time
-# 180626-1030 - Split mysqldump and packing.
-# 181223-1820 - Use tar | xy for packing
-#             - Pack database tables in own files
-#             - Remove passwords from logging
-# 181226-1210 - Add PrgVersion
-#             - Add tests for file exists
+# based on ADMIN_backup.pl from Matt Florell.
 #
 # 181226-1400 - 3.0.0 - jff First work on ADMIN_backup_ng.pl, based on ADMIN_backup.pl.
 # 181226-1810 - 3.0.0 - jff Switch to new config file.
 #                     - jff Use FTPBACKUP_* instead $VARREPORT_* for ftp backup.
 # 181227-1030 - 3.0.1 - jff Allow table names with whitespaces
 # 181228-1215 - 3.0.2 - jff Correct typo
+# 190531-1422 - 3.1.0 - jff Change all db backups to one file per table.
+#                           Change setupfile location.
+#                           Switch from service to systemctl
+#                           Change the directory for Backup files. 
+#                           Create backuppath if not exists.
 #
 
-$PrgVersion = "3.0.2";
+$PrgVersion = "3.1.0";
 
 ###### Test that the script is running only once a time
 use Fcntl qw(:flock);
@@ -85,15 +62,16 @@ print "$0 Version: $PrgVersion \n";
 
 use Config::IniFiles;
 
-my $defcfg = Config::IniFiles->new( -file => "/etc/flyingpenguin/vicidial.conf" );
-my $newcfg = Config::IniFiles->new( -file => "/etc/flyingpenguin/vicidial.ini", -import => $defcfg  );
-my $cfg    = Config::IniFiles->new( -file => "/etc/flyingpenguin/vicidial.local", -import => $newcfg );
+my $defcfg = Config::IniFiles->new( -file => "/etc/snct-dialer/snct-dialer.conf" );
+my $newcfg = Config::IniFiles->new( -file => "/etc/snct-dialer/snct-dialer.ini", -import => $defcfg  );
+my $cfg    = Config::IniFiles->new( -file => "/etc/snct-dialer/snct-dialer.local", -import => $newcfg );
 
 $PATHhome   = $cfg->val( 'Path', 'PATHhome' );
 $PATHlogs   = $cfg->val( 'Path', 'PATHlogs' );
 $PATHagi    = $cfg->val( 'Path', 'PATHagi' );
 $PATHweb    = $cfg->val( 'Path', 'PATHweb' );
 $PATHsounds = $cfg->val( 'Path', 'PATHsounds' );
+$PATHbackup = $cfg->val( 'Path', 'PATHbackup' );
 
 $Server_name = $cfg->val( 'Server', 'Server_name' );
 
@@ -157,7 +135,7 @@ if (length($ARGV[0])>1)
 		print "  [--debug] = debug\n";
 		print "  [--test] = test\n";
 		print "  [--db_raw_files_copy] = if set the backup won't be a mysql dump. It will tar the /var/lib/mysql folder. WARNING, THIS OPTION WILL STOP THE MYSQL SERVER!\n";
-		print "  [--archive_path=/PATH/FROM/ROOT] = absolute path to store the resulting backup\n";
+		print "  [--backup_path=/PATH/FROM/ROOT] = absolute path to store the resulting backup\n";
 		exit;
 		}
 	else
@@ -251,12 +229,12 @@ if (length($ARGV[0])>1)
 			$db_raw_files_copy = 1;
 			print "\n----- DB raw files copy -----\n\n";
 			}
-		if ($args =~ /--archive_path=/i)
+		if ($args =~ /--backup_path=/i)
 			{
-			@data_in = split(/--archive_path=/,$args);
-			$ARCHIVEpath = $data_in[1];
-			$ARCHIVEpath =~ s/ .*$//gi;
-			print "\n----- Archive path set to $ARCHIVEpath -----\n\n";
+			@data_in = split(/--backup_path=/,$args);
+			$PATHbackup = $data_in[1];
+			$PATHbackup =~ s/ .*$//gi;
+			print "\n----- Backup path set to $PATHbackup -----\n\n";
 			}
 		if ($args =~ /--ftp-server=/i)
 			{
@@ -297,8 +275,7 @@ if (length($ARGV[0])>1)
 #	print "no command line options set\n";
 #	}
 
-
-if (!$ARCHIVEpath) {$ARCHIVEpath = "$PATHlogs/archive";}
+if (!$PATHbackup) { $PATHbackup = "/var/backup/SNCT-dialer";}
 if (!$TEMPpath) {$TEMPpath = "/tmp/vicibackup";}
 if (!$TEMPpathComp) {$TEMPpathComp = "/tmp";}
 if (!$VARDB_port) {$VARDB_port='3306';}
@@ -348,8 +325,19 @@ $txz='.txz';
 $sgSTRING='';
 $underl='_';
 
-`cd $ARCHIVEpath`;
+#
+# Create backup path
+#
+if ( !-d $PATHbackup ) {
+    make_path $PAATHbackup or die "Failed to create path: $directories";
+}
+
+`cd $PATHbackup`;
 `mkdir $TEMPpath`;
+
+if ( !-d $PATHbackup ) {
+    make_path $PAATHbackup or die "Failed to create path: $directories";
+}
 
 if ( ($without_db < 1) && ($conf_only < 1) ) {
 	if ($db_raw_files_copy < 1) {
@@ -451,26 +439,63 @@ if ( ($without_db < 1) && ($conf_only < 1) ) {
 			$sthA->finish();
 
 			if ($db_without_logs) {
-				$dump_non_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
-				$dump_non_log_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
-				$dump_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $log_tables $archive_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
+				foreach ( @regular_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+				foreach ( @conf_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+#				$dump_non_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
+#				$dump_non_log_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
+#				$dump_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $log_tables $archive_tables | $xzbin -9 > $TEMPpath/LOGS_$Server_name$underl$temp_dbname$underl$wday$xz";
 
-				if ($DBX) {print "$dump_non_log_commandOP\nDEBUG: LOG EXPORT COMMAND(not run): $dump_log_command\n";}
-				`$dump_non_log_command`;
+#				if ($DBX) {print "$dump_non_log_commandOP\nDEBUG: LOG EXPORT COMMAND(not run): $dump_log_command\n";}
+#				`$dump_non_log_command`;
 			} elsif ($db_without_archives) {
-				$dump_non_archive_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables $log_tables | $xzbin -9 > $TEMPEpath/ARCHIVES_$Server_name_$underl$temp_dbname$underl$wday$xz";
-				$dump_non_archive_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables $log_tables | $xzbin -9 > $TEMPEpath/ARCHIVES_$Server_name_$underl$temp_dbname$underl$wday$xz";
-				$dump_archive_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $archive_tables | $xzbin -9 > $TEMPpath/ARCHIVES_$Server_name$underl$temp_dbname$underl$wday$xz";
+				
+				foreach ( @regular_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+				foreach ( @conf_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+				foreach ( @log_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+#				$dump_non_archive_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables $log_tables | $xzbin -9 > $TEMPEpath/ARCHIVES_$Server_name_$underl$temp_dbname$underl$wday$xz";
+#				$dump_non_archive_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $regular_tables $conf_tables $log_tables | $xzbin -9 > $TEMPEpath/ARCHIVES_$Server_name_$underl$temp_dbname$underl$wday$xz";
+#				$dump_archive_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $archive_tables | $xzbin -9 > $TEMPpath/ARCHIVES_$Server_name$underl$temp_dbname$underl$wday$xz";
 
-				if ($DBX) {print "$dump_non_archive_commandOP\nDEBUG: ARCHIVE EXPORT COMMAND(not run): $dump_archive_command\n";}
-				`$dump_non_archive_command`;
+#				if ($DBX) {print "$dump_non_archive_commandOP\nDEBUG: ARCHIVE EXPORT COMMAND(not run): $dump_archive_command\n";}
+#				`$dump_non_archive_command`;
 			} elsif ($db_settings_only) {
-				$dump_non_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $conf_tables | $zxbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
-				$dump_non_log_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $conf_tables | $zxbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
-				$dump_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $log_tables $archive_tables $regular_tables | $xzbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
+				foreach ( @conf_tables ){
+					if ($DBX) {
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
+					}
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$Server_name$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
+				}
+#				$dump_non_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname $conf_tables | $zxbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
+#				$dump_non_log_commandOP = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname $conf_tables | $zxbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
+#				$dump_log_command = "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --no-data --no-create-db --routines $temp_dbname $log_tables $archive_tables $regular_tables | $xzbin -9 > $TEMPpath/SETTINGSONLY_$Server_name$underl$temp_dbname$underl$wday$xz";
 
-				if ($DBX) {print "$dump_non_log_commandOP\nNOT ARCHIVED: $dump_log_command\n";}
-				`$dump_non_log_command`;
+#				if ($DBX) {print "$dump_non_log_commandOP\nNOT ARCHIVED: $dump_log_command\n";}
+#				`$dump_non_log_command`;
 			} else {
 				foreach ( @all_tables ){
 					if ($DBX) {
@@ -481,16 +506,25 @@ if ( ($without_db < 1) && ($conf_only < 1) ) {
 				if ($DBX) {
 					print "$tarbin -cf $TEMPpath/$Server_name$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`\n";
 				}
-				`$tarbin -cf $TEMPpath/$Server_name$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`;
-				`rm $TEMPpath/*.sql.xz`;
 			}
+			$routines = "routines";
+			if ($DBX) {
+			    print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --no-data --no-create-info --routines $temp_dbname | $xzbin -3 -T0 - > '$TEMPpath/$VARserver_ip$underl$temp_dbname$underl$routines$underl$wday.sql.xz'\n";
+			}
+			`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --no-data --no-create-info --routines $temp_dbname  | $xzbin -3 -T0 - > '$TEMPpath/$VARserver_ip$underl$temp_dbname$underl$routines$underl$wday.sql.xz'`;
+			if ($DBX) {
+				print "$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`\n";
+			}
+			`$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`;
+			`rm $TEMPpath/*.sql.xz`;
+			
 			$c++;
 		}
 	} else {
 		print "\n----- Mysql Raw Copy -----\n\n";
-		`service mysql stop`;
+		`systemctl stop mysql`;
 		`$tarbin -Jcvf $TEMPpath/"$Server_name$underl"mysql_raw_"$wday"$txz /var/lib/mysql/test /var/lib/mysql/mysql /var/lib/mysql/performance_schema /var/lib/mysql/asterisk`;
-		`service mysql start`;
+		`systemctl stop mysql`;
 	}
 }
 
@@ -505,6 +539,7 @@ if ( ($without_conf < 1) && ($db_only < 1) )
 	if (-e "/usr/share/astguiclient/AST_DB_lead_status_change.pl") {$zapdahdi .= " /usr/share/astguiclient/AST_DB_lead_status_change.pl";}
 	if (-e "/usr/local/sbin") {$zapdahdi .= " /usr/local/sbin";}
 	if (-e ("/etc/flyingpenguin")) {$zapdahdi .= " /etc/flyingpenguin";}
+	if (-e ("/etc/snct-dialer")) {$zapdahdi .= " /etc/snct-dialer";}
 	if ($DBX) {print "$tarbin -cf - /etc/astguiclient.conf $zapdahdi /etc/asterisk | $xzbin -1 -T0 - > $TEMPpath/$Server_name$conf$wday$txz \n";}
 	`$tarbin -cf - /etc/astguiclient.conf $zapdahdi /etc/asterisk | $xzbin -1 -T0 - > $TEMPpath/$Server_name$conf$wday$txz`;
 
@@ -577,27 +612,27 @@ if ( ($conf_only < 1) && ($db_only < 1) && ($without_voicemail < 1) )
 	}
 
 ### REMOVE OLD GZ, xz and tar FILE
- if ( -e "$ARCHIVEpath/$Server_name$all$wday$tar$gz" ) {
-	if ($DBX) {print "rm -f $ARCHIVEpath/$Server_name$all$wday$tar$gz\n";}
-	`rm -f $ARCHIVEpath/$Server_name$all$wday$tar$gz`;
+ if ( -e "$PATHbackup/$Server_name$all$wday$tar$gz" ) {
+	if ($DBX) {print "rm -f $PATHbackup/$Server_name$all$wday$tar$gz\n";}
+	`rm -f $PATHbackup/$Server_name$all$wday$tar$gz`;
 }
 
- if ( -e "$ARCHIVEpath/$Server_name$all$wday.old$txz" ) {
-	if ($DBX) {print "rm -f $ARCHIVEpath/$Server_name$all$wday.old$txz\n";}
-	`rm -f $ARCHIVEpath/$Server_name$all$wday.old$txz`;
+ if ( -e "$PATHbackup/$Server_name$all$wday.old$txz" ) {
+	if ($DBX) {print "rm -f $PATHbackup/$Server_name$all$wday.old$txz\n";}
+	`rm -f $PATHbackup/$Server_name$all$wday.old$txz`;
 }
-if ( -e "$ARCHIVEpath/$Server_name$all$wday.old$tar" ) {
-	if ($DBX) {print "rm -f $ARCHIVEpath/$Server_name$all$wday.old$tar\n";}
-	`rm -f $ARCHIVEpath/$Server_name$all$wday.old$tar`;
+if ( -e "$PATHbackup/$Server_name$all$wday.old$tar" ) {
+	if ($DBX) {print "rm -f $PATHbackup/$Server_name$all$wday.old$tar\n";}
+	`rm -f $PATHbackup/$Server_name$all$wday.old$tar`;
 }
 
-if ( -e "$ARCHIVEpath/$Server_name$all$wday$txz" ) {
-	if ($DBX) {print "mv $ARCHIVEpath/$Server_name$all$wday$txz $ARCHIVEpath/$Server_name$all$wday.old$txz\n";}
-	`mv $ARCHIVEpath/$Server_name$all$wday$txz $ARCHIVEpath/$Server_name$all$wday.old$txz`;
+if ( -e "$PATHbackup/$Server_name$all$wday$txz" ) {
+	if ($DBX) {print "mv $PATHbackup/$Server_name$all$wday$txz $PATHbackup/$Server_name$all$wday.old$txz\n";}
+	`mv $PATHbackup/$Server_name$all$wday$txz $PATHbackup/$Server_name$all$wday.old$txz`;
 }
-if ( -e "$ARCHIVEpath/$Server_name$all$wday$tar" ) {
-	if ($DBX) {print "mv $ARCHIVEpath/$Server_name$all$wday$tar $ARCHIVEpath/$Server_name$all$wday.old$tar\n";}
-	`mv $ARCHIVEpath/$Server_name$all$wday$tar $ARCHIVEpath/$Server_name$all$wday.old$tar`;
+if ( -e "$PATHbackup/$Server_name$all$wday$tar" ) {
+	if ($DBX) {print "mv $PATHbackup/$Server_name$all$wday$tar $PATHbackup/$Server_name$all$wday.old$tar\n";}
+	`mv $PATHbackup/$Server_name$all$wday$tar $PATHbackup/$Server_name$all$wday.old$tar`;
 }
 
 ### PUT EVERYTHING TOGETHER TO BE COMPRESSED ###
@@ -605,8 +640,8 @@ if ($DBX) {print "$tarbin -Jcf $TEMPpathComp/$Server_name$all$wday$tar $TEMPpath
 `$tarbin -cf $TEMPpathComp/$Server_name$all$wday$tar $TEMPpath`;
 
 ### Copy to ArchivePath ###
-if ($DBX) {print "cp $TEMPpathComp/$Server_name$all$wday$tar $ARCHIVEpath/\n";}
-`cp $TEMPpathComp/$Server_name$all$wday$tar $ARCHIVEpath/`;
+if ($DBX) {print "cp $TEMPpathComp/$Server_name$all$wday$tar $PATHbackup/\n";}
+`cp $TEMPpathComp/$Server_name$all$wday$tar $PATHbackup/`;
 
 ### Move to LocalPath ###
 if($LOCALpath) {
@@ -616,12 +651,12 @@ if($LOCALpath) {
 
 
 ### COMPRESS THE ALL FILE ###
-#if ($DBX) {print "$gzipbin -9 $ARCHIVEpath/$Server_name$all$wday$tar\n";}
-#`$gzipbin -9 $ARCHIVEpath/$Server_name$all$wday$tar`;
+#if ($DBX) {print "$gzipbin -9 $PATHbackup/$Server_name$all$wday$tar\n";}
+#`$gzipbin -9 $PATHbackup/$Server_name$all$wday$tar`;
 
 ### REMOVE TEMP FILES ###
-#if ($DBX) {print "rm -fR $ARCHIVEpath/temp\n";}
-#`rm -fR $ARCHIVEpath/temp`;
+#if ($DBX) {print "rm -fR $PATHbackup/temp\n";}
+#`rm -fR $PATHbackup/temp`;
 
 if ($DBX) {print "rm -fR $TEMPpath\n";}
 `rm -fR $TEMPpath`;
